SONARTEXT-157 SecretsSpecificationFilesDefinition should be generated dynamically (#206)